# rsomics-fastp

./: Cargo.toml  README.md
benches/: bench.rs  fastp.rs
src/: adapter.rs  cli.rs  filter.rs  lib.rs  main.rs  poly.rs  report.rs  run.rs
tests/: compat.rs
tests/golden/: fastp_se_filtered.fastq  test_r1.fastq
