[package]
name = "rsomics-fastp"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
description = "Fast FASTQ quality control and preprocessing"
repository = "https://github.com/omics-rust/rsomics-fastp"
readme = "README.md"

[[bin]]
name = "rsomics-fastp"
path = "src/main.rs"

[lib]
name = "rsomics_fastp"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6" }
clap = { version = "4", features = ["derive"] }
needletail = "0.6"
flate2 = { version = "1", default-features = false, features = ["zlib-rs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[[bench]]
name = "fastp"
harness = false

[dev-dependencies]
rsomics-common = { version = "0.6", features = ["test-support"] }
tempfile = "3"
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
